# gpui-tetris

./: AGENTS.md  Cargo.toml  README.md
assets/sfx/: .gitkeep
docs/: audio_assets.md  dependencies.md
src/: audio.rs  lib.rs  main.rs
src/game/: board.rs  input.rs  mod.rs  pieces.rs  state.rs
src/game/state/: actions.rs  kicks.rs  rng.rs  scoring.rs  timing.rs  types.rs
src/ui/: app.rs  input.rs  mod.rs  style.rs  ui_state.rs  view.rs
src/ui/render/: board.rs  layout.rs  mod.rs  overlay.rs  panel.rs  theme.rs
src/ui/view/: events.rs
tests/: advanced_scoring.rs  audio_gains.rs  audio_mapping.rs  game_actions.rs  game_rules.rs  game_tick.rs  game_ui_state.rs  hold_action.rs  input_mapping.rs  input_repeat.rs  lock_reset_limit.rs  queue_size.rs  rotation_kicks.rs  scoring_and_speed.rs  sound_events.rs  state_helpers.rs
