[package]
name = "gpui-tetris"
version = "0.1.0"
edition = "2024"

[dependencies]
# gpui crate version may change; update as needed for your local setup.
gpui = "0.2.2"
cpal = "0.17.1"
crossbeam-channel = "0.5"
hound = "3.5"
anyhow = "1.0"
gilrs = "0.11.1"

[package.metadata.bundle]
name = "gpui-tetris"
identifier = "com.lyuguoning.com.gpui-tetris"
icon = ["assets/icon.icns"]
resources = ["assets/sfx"]

[patch.crates-io]
zed-font-kit = { path = "vendor/zed-font-kit" }
gpui = { path = "vendor/gpui" }
